--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 </div>
 <table class="imgtable"><tr><td>
 <img src="images\EK.jpg" alt="Elnaz Kabir" width="320px" height="240px" />&nbsp;</td>
-<td align="left"><p><b>Ph.D. Candidate </b> <br />
-<a href="http://ioe.engin.umich.edu/" target=&ldquo;blank&rdquo;>Department of Industrial &amp; Operations Engineering</a> <br />
-<a href="http://www.umich.edu/" target=&ldquo;blank&rdquo;>University of Michigan at Ann Arbor</a><br /> 
+<td align="left"><p><b>Assistant Professor</b> <br />
+<a href="https://engineering.tamu.edu/etid/index.html" target=&ldquo;blank&rdquo;>Department of Engineering Technology &amp; Industrial Distribution</a> <br />
+<a href="https://www.tamu.edu/index.html" target=&ldquo;blank&rdquo;>Texas A&amp;M University at College Station</a><br /> 
 <br />
 <b>E-mail:</b> ekabir-at-umich-dot-edu <br /> 
 <br />
