--- a/index.html
+++ b/index.html
@@ -28,67 +28,40 @@
 <td align="left"><p><b>Assistant Professor</b> <br />
 <a href="https://engineering.tamu.edu/etid/index.html" target=&ldquo;blank&rdquo;>Department of Engineering Technology &amp; Industrial Distribution</a> <br />
 <a href="https://www.tamu.edu/index.html" target=&ldquo;blank&rdquo;>Texas A&amp;M University at College Station</a><br /> 
-<br />
-<b>E-mail:</b> ekabir-at-umich-dot-edu <br /> 
-<br />
+<b>E-mail:</b> ekabir-at-tamu-dot-edu <br /> 
+<a href="https://scholar.google.com/citations?user=itDj2Y0AAAAJ&amp;hl=en&amp;oi=ao" target=&ldquo;blank&rdquo;>Google Scholar</a> <br />
+<a href="https://www.linkedin.com/in/elnaz-kabir-150011b8/" target=&ldquo;blank&rdquo;>Linkedin</a> <br />
 
-<a href="https://twitter.com/elnazkabir" target=&ldquo;blank&rdquo;>Twitter</a> <br />
-<a href="https://www.linkedin.com/in/elnaz-kabir-150011b8" target=&ldquo;blank&rdquo;>Linkedin</a> <br />
-<a href="https://publons.com/researcher/1452656/elnaz-kabir/" target=&ldquo;blank&rdquo;>Publons</a> <br />
+
 </p>
 </td></tr></table>
 <h2>About Me</h2>
-<p>I am a Postdoctoral Research Associate at Cornell University jointly wroking with Profs <a href="https://bee.cals.cornell.edu/people/catherine-anderson/" target=&ldquo;blank&rdquo;>Lindsay Anderson</a>, <a href="https://bee.cals.cornell.edu/people/scott-steinschneider/" target=&ldquo;blank&rdquo;>Scott Steinschneider</a>, and <a href="https://www.cee.cornell.edu/faculty-directory/vivek-srikrishnan" target=&ldquo;blank&rdquo;>Vivek Srikrishnan</a>. 
-
-I received my Ph.D. degree in <b>Industrial and Operations Engineering</b> at the <a href="http://ioe.engin.umich.edu/" target=&ldquo;blank&rdquo;>Department of Industrial &amp; Operations Engineering</a> of the University of Michigan at Ann Arbor in 2021. In my Ph.D., I have been advised by Professor <a href="https://ioe.engin.umich.edu/people/seth-guikema/" target=&ldquo;blank&rdquo;>Seth D. Guikema</a>. 
-I also earned a MSc in <b>Statistics</b> at the <a href="https://lsa.umich.edu/stats" target=&ldquo;blank&rdquo;>Department of Statistics</a> of the University of Michigan.<br />
-
-</p>
-<h2>About My Research Interests</h2>
-<p>My research interests focus on the impacts of climate change and extreme weather events on energy systems. My current project includes studying the risks of climate change on energy systems with high penetration of renewables. My research aims to develop <b>data-driven frameworks under uncertainty</b> for <i>predictive</i> and <i>prescriptive analytics</i> in order to address the <i>resiliency challenges of critical infrastructures</i>.
-<br /> <br />
-<b>Methodologies</b>: Data and Risk Analytics, Statistical Machine Learning Theory, Data-driven Robust and Stochastic Optimization, Predictive Modeling for Imbalanced Data, Deep Learning and Artificial Intelligence, Bayesian Modeling and Inference.  
-<br /> <br />
-<b>Applications</b>: Energy Systems&rsquo; Resiliency, Risk Mitigation for Critical Infrastructures (e.g., transportation, energy, and water systems), Energy Systems’ Sustainability, Disaster Operations Management, Natural Hazards.
-
-</p>
-<h2>Honors and Awards </h2>
 <p>
-</p>
-<ul>
-<li><p>Winner, the <b>Best Student Paper Award</b> Recognized By the Foundational Issues in Risk Analysis Specialty Group at The Society for Risk Analysis (SRA) Annual Meeting (Dec 2019)
-
-</p>
-</li>
-<li><p>Departmental Nomination, <b>INFORMS Doctoral Colloquium</b> (Oct 2019)
-
-</p>
-</li>
-<li><p>Finalist, the <b>Poster Competition</b> at The Second Conference on Risk Analysis, Decision Analysis and Security (Aug 2019)
+I'm an Assistant Professor in the <a href="https://engineering.tamu.edu/etid/index.html" target=&ldquo;blank&rdquo;>Department of Engineering Technology &amp; Industrial Distribution</a> (ETID) at <a href="https://www.tamu.edu/index.html" target=&ldquo;blank&rdquo;>Texas A&amp;M University</a>. 
+In my research, I am interested in developing data-driven frameworks under uncertainty in order to address the resiliency challenges of critical infrastructures, in particular power systems. My research integrates predictive and prescriptive analytics, drawing on methodologies from data science, machine learning, risk analysis, simulation, stochastic and robust optimization. My current projects include applications in a broad range of power system resiliency areas including energy system dicarbonization, and power outage management.
+Before joining ETID, I was a Postdoctoral Research Fellow at <a href="https://www.cornell.edu/" target=&ldquo;blank&rdquo;>Cornell University</a>. I received my Ph.D. degree in <a href="http://ioe.engin.umich.edu/" target=&ldquo;blank&rdquo;>Industrial and Operations Engineering</a> and my M.S. degree in <a href="https://lsa.umich.edu/stats" target=&ldquo;blank&rdquo;>Statistics</a>, both from <a href="https://umich.edu/" target=&ldquo;blank&rdquo;>University of Michigan</a>.
 
 
 
 
 
-</p>
-</li>
-<li><p>The <b>Engineering Graduate Fellowship</b>, IOE, University of Michigan (2018, 2019) <br />
 
-</p>
-</li>
-<li><p>The <b>SRA Travel Award</b>, SRA Annual Meeting (Dec 2018, Dec 2019)
 
-</p>
-</li>
-<li><p>The <b>Rackham Travel Grants</b> (Fall 2017, Fall 2018, Summer 2019)
 
-</p>
-</li>
-<li><p>Winner, the <b>Best Poster Award</b> at the Society for Risk Analysis (SRA) Annual Meeting (Dec 2016)
 
-</p>
-</li>
-<li><p>The Full <b>Scholarship</b> From the Statistical and Applied Mathematical Sciences Institute (<b>SAMSI</b>) to attend the SAMSI Summer School 2016 program (Aug 2016)
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -99,8 +72,6 @@ I also earned a MSc in <b>Statistics</b> at the <a href="https://lsa.umich.edu/s
 
 
 </p>
-</li>
-</ul>
 </td>
 </tr>
 </table>
