--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 <div class="menu-category">Elnaz Kabir</div>
 <div class="menu-item"><a href="index.html" class="current">Home</a></div>
 <div class="menu-item"><a href="publication.html">Publications</a></div>
-<div class="menu-item"><a href="teaching.html">Teaching&nbsp;&amp;&nbsp;Service</a></div>
+<div class="menu-item"><a href="teaching.html">Teaching</a></div>
+<div class="menu-item"><a href="CV_ElnazKabir.pdf">CV</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
@@ -37,9 +38,17 @@
 </td></tr></table>
 <h2>About Me</h2>
 <p>
-I'm an Assistant Professor in the <a href="https://engineering.tamu.edu/etid/index.html" target=&ldquo;blank&rdquo;>Department of Engineering Technology &amp; Industrial Distribution</a> (ETID) at <a href="https://www.tamu.edu/index.html" target=&ldquo;blank&rdquo;>Texas A&amp;M University</a>. 
-In my research, I am interested in developing data-driven frameworks under uncertainty in order to address the resiliency challenges of critical infrastructures, in particular power systems. My research integrates predictive and prescriptive analytics, drawing on methodologies from data science, machine learning, risk analysis, simulation, stochastic and robust optimization. My current projects include applications in a broad range of power system resiliency areas including energy system dicarbonization, and power outage management.
-Before joining ETID, I was a Postdoctoral Research Fellow at <a href="https://www.cornell.edu/" target=&ldquo;blank&rdquo;>Cornell University</a>. I received my Ph.D. degree in <a href="http://ioe.engin.umich.edu/" target=&ldquo;blank&rdquo;>Industrial and Operations Engineering</a> and my M.S. degree in <a href="https://lsa.umich.edu/stats" target=&ldquo;blank&rdquo;>Statistics</a>, both from <a href="https://umich.edu/" target=&ldquo;blank&rdquo;>University of Michigan</a>.
+I am an Assistant Professor in the Department of <a href="https://engineering.tamu.edu/etid/index.html" target=&ldquo;blank&rdquo;>Engineering Technology &amp; Industrial Distribution</a> (ETID) at <a href="https://www.tamu.edu/index.html" target=&ldquo;blank&rdquo;>Texas A&amp;M University</a>, where I am passionate about developing cutting-edge solutions for critical infrastructure resilience concerns, with a special focus on power systems. <br />
+<br />
+My research revolves around designing data-driven frameworks that can thrive in uncertain environments, tackling issues in <i><b>energy system decarbonization</b></i> and <i><b>power outage management</b></i>. To achieve this, I leverage the power of predictive and prescriptive analytics, drawing from diverse fields like data science, machine learning, risk analysis, and simulation. I also delve into stochastic and robust optimization methodologies to ensure robustness and adaptability. <br />
+<br />
+Prior to my current position, I was a Postdoctoral Research Fellow at <a href="https://www.cornell.edu/" target=&ldquo;blank&rdquo;>Cornell University</a>. My academic journey includes earning a Ph.D. in <a href="http://ioe.engin.umich.edu/" target=&ldquo;blank&rdquo;>Industrial and Operations Engineering</a> from the <a href="https://umich.edu/" target=&ldquo;blank&rdquo;>University of Michigan</a>, complemented by an M.S. in <a href="https://lsa.umich.edu/stats" target=&ldquo;blank&rdquo;>Statistics</a>. <br />
+<br />
+I am deeply enthusiastic about the boundless possibilities of my work and its potential to drive transformative change in critical infrastructure resilience. My current projects are as diverse as they are impactful, spanning various facets of power system resiliency.
+
+
+
+
 
 
 
