--- a/publication.html
+++ b/publication.html
@@ -14,7 +14,8 @@
 <div class="menu-category">Elnaz Kabir</div>
 <div class="menu-item"><a href="index.html">Home</a></div>
 <div class="menu-item"><a href="publication.html">Publications</a></div>
-<div class="menu-item"><a href="teaching.html">Teaching&nbsp;&amp;&nbsp;Service</a></div>
+<div class="menu-item"><a href="teaching.html">Teaching</a></div>
+<div class="menu-item"><a href="CV_ElnazKabir.pdf">CV</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
@@ -22,10 +23,16 @@
 <div id="subtitle">
 </div>
 </div>
-<h2>Published Papers</h2>
+<h2>Published/Accepted Papers</h2>
 <p>
 </p>
 <ol>
+<li><p>Power Outage Prediction Using Data Streams: An Adaptive Ensemble Learning Approach with a Feature- and Performance-based Weighting Mechanism, <br />
+<b>E. Kabir</b>, S. Guikema, and S. Quiring (2023), <b>Risk Analysis</b>. <br />
+(Collaboration with American Electric Power (AEP) Company.)
+
+</p>
+</li>
 <li><p><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=8703843" target=&ldquo;blank&rdquo;>Predicting Thunderstorm-induced Power Outages to Support Utility Restoration</a>, <br />
 <b>E. Kabir</b>, S. Guikema, and S. Quiring (2019), <b>IEEE Transactions on Power Systems</b>, Vol. 34 (6), 4370-4381. <br />
 (Collaboration with Southern Company.)
@@ -45,17 +52,17 @@ Among the 25 most cited articles published in EJOR since 2016.
 </p>
 </li>
 </ol>
-<h2>Prepared Papers</h2>
+<h2>Submitted Papers and Pre-prints</h2>
 <p>
 </p>
 <ol>
-<li><p>An Assessment of Drivers of Power System Damage During Severe Weather, <br /> 
-<b>E. Kabir</b>, S. Guikema, S. Quiring, and B. McRoberts (2022).
+<li><p><a href="https://arxiv.org/pdf/2307.11076.pdf" target=&ldquo;blank&rdquo;>Quantifying the Multi-Scale and Multi-Resource Impacts of lLarge-Scale Adoption of Renewable Energy Sources</a>, <br />
+<b>E. Kabir</b>, V. Srikrishnan, V. Liu, S. Steinschneider, L. Anderson (2023), arXiv:2307.11076.
 
 </p>
 </li>
-<li><p>Power Outage Prediction Using Data Streams: An Adaptive Ensemble Learning Approach with a Feature- and Performance-based Weighting Mechanism, <br />
-<b>E. Kabir</b>, S. Guikema, and S. Quiring (2022).
+<li><p><a href="https://arxiv.org/pdf/2307.15079.pdf" target=&ldquo;blank&rdquo;>Hetero- geneous Vulnerability of Zero-Carbon Power Grids under Climate-Technological Changes</a>, <br />
+V. Liu, V. Srikrishnan, K. Doering, <b>E. Kabir</b>, S. Steinschneider, L. Anderson (2023), arXiv:2307.15079.
 
 
 </p>
@@ -65,50 +72,14 @@ Among the 25 most cited articles published in EJOR since 2016.
 <p>
 </p>
 <ol>
+<li><p>An Assessment of Drivers of Power System Damage During Severe Weather, <br /> 
+<b>E. Kabir</b>, S. Guikema, S. Quiring, and B. McRoberts (2023).
+
+</p>
+</li>
 <li><p>Data-driven Adaptive Crew Coordination Model for Power Outage Restoration, <br />
-E. Kabir and S. Guikema (2022).
+<b>E. Kabir</b> and S. Guikema (2023).
 
-
-</p>
-</li>
-</ol>
-<h2>Seminars and Conference Presentations</h2>
-<p>
-</p>
-<ol>
-<li><p>E. Kabir, S. Guikema (2021), “A Repair Crew Coordination Model Under Uncertainty for Power Outage Restoration”, Virtual SRA Annual Meeting,.
-
-</p>
-</li>
-<li><p>E. Kabir, S. Guikema, and S. Quiring (2020), “Adaptive Two-stage Bayesian Model Averaging for Estimating the Impact of Hazards on Power System Service”, Virtual INFORMS Annual Meeting.
-
-</p>
-</li>
-<li><p>E. Kabir, S. Guikema, and S. Quiring (2019), “Predicting Daily Power Outages Using a Bayesian Model Averaging”, SRA Annual Meeting, Arlington, VA, USA.
-
-</p>
-</li>
-<li><p>E. Kabir, S. Guikema, and S. Quiring (2019), “Predicting Daily Power Outages Using a Bayesian Model Averaging Approach”, INFORMS Annual Meeting, Seatle, WA, USA.
-
-</p>
-</li>
-<li><p>E. Kabir, S. Guikema, and S. Quiring (2018), “Developing Probabilistic Models for Predicting Zero-inflated Power-Outages”, SRA Annual Meeting, New Orleans, LA, USA.
-
-</p>
-</li>
-<li><p>E. Kabir, S. Guikema, and S. Quiring (2018), “Probabilistic Mixture Models for Predicting Unbalanced Thunderstorm-Induced Power-Outages”, INFORMS Annual Meeting, Phoenix, AZ, USA.
-
-</p>
-</li>
-<li><p>E. Kabir and S. Guikema (2017), “Learning from Imbalanced Data Sets for Estimating Power-Outages”, SRA Annual Meeting, Arlington, VA, USA.
-
-</p>
-</li>
-<li><p>E. Kabir and S. Guikema (2016), “Learning of Imbalanced Data for Predicting the Power-Outages”, INFORMS Annual Meeting, Nashville, PA, USA.
-
-</p>
-</li>
-<li><p>E. Kabir, S. Guikema, and B. Kane, (2016), “Statistical Modeling of Tree Failures During Storms”, Joint Statistical Meeting, Baltimore, MD, USA.
 </p>
 </li>
 </ol>
