--- a/teaching.html
+++ b/teaching.html
@@ -14,121 +14,22 @@
 <div class="menu-category">Elnaz Kabir</div>
 <div class="menu-item"><a href="index.html">Home</a></div>
 <div class="menu-item"><a href="publication.html">Publications</a></div>
-<div class="menu-item"><a href="teaching.html" class="current">Teaching&nbsp;&amp;&nbsp;Service</a></div>
+<div class="menu-item"><a href="teaching.html" class="current">Teaching</a></div>
+<div class="menu-item"><a href="CV_ElnazKabir.pdf">CV</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
 <h1>Elnaz Kabir - Teaching</h1>
 <div id="subtitle">
 
-
 </div>
 </div>
-<h2>Teaching Interests</h2>
-<p>In addition to my love of research, I have always been passionate about teaching. 
-
-
-Teaching is an integral and fascinating part of my career. During my graduate studies, I have gained teaching experience at various levels: as an instructor with full responsibility for a graduate-undergraduate course, as a teaching assistant for a wide range of applied and theoretical courses, and as a research mentor for undergraduate and graduate students. 
-
-
-
-
-
-
-
-</p>
-<h2>Sole Instructor</h2>
-<table class="imgtable"><tr><td>
-<img src="images\IOE460.JPG" alt="" width="360px" height="180px" />&nbsp;</td>
-<td align="left"><ul>
-<li><p>Class: Decision Analysis (IOE 460), Fall 2018. 
-</p>
-</li>
-<li><p>The Industrial &amp; Operations Engineering Department at the University of Michigan, Ann Arbor. 
-</p>
-</li>
-<li><p>Enrollment: 40 seniors and graduate students. 
-</p>
-</li>
-<li><p>Outline: Syllabus of the course is provided as a <a href="https://07111934-d4df-4bfa-9e90-b8dfaac84e54.filesusr.com/ugd/c61f23_4443bed0f1b34808a06e7c942e3b93f9.pdf" target=&ldquo;blank&rdquo;>PDF</a>.
-</p>
-</li>
-<li><p>Instructor Evaluation: 4.6 out of 5.
-</p>
-</li>
-</ul>
-</td></tr></table>
-<p>
-
-</p>
-<h2>Teaching Assistant</h2>
 <ul>
-<li><p><b>Economic Decision Making</b>, (IOE 201, including 53 undergraduate students), IOE Department, UMICH (Winter 2018)
+<li><p>I am currently teaching <a href="https://catalog.tamu.edu/undergraduate/course-descriptions/idis/" target=&ldquo;blank&rdquo;>Analytics for Distribution Operations (IDIS 450)</a> in both fall and spring semesters.
 
 </p>
 </li>
-<li><p><b>Operations Modeling</b>, (IOE 202, including 71 undergraduate students), IOE Department, UMICH (Winter 2018)
-
-</p>
-</li>
-</ul>
-<h2>Guest Lecturer:​</h2>
-<ul>
-<li><p>&ldquo;Risk Analysis&rdquo; (IOE 591, a graduate-level course), IOE Department, UMICH (Feb 2018)
-</p>
-<ul>
-<li><p>Topic: Bayesian Belief Network and Inferential Analysis​.
-
-</p>
-</li>
-</ul>
-
-</li>
-</ul>
-<h2>Project Manager:​</h2>
-<ul>
-<li><p><b>The VIP team</b> (including 11 undergraduate/graduate students), IOE Department, UMICH (Fall 2016)
-</p>
-<ul>
-<li><p>The goal of the VIP team was developing agent-based models for the evolution of the resilience and sustainability of a region experiencing repeated hurricanes and heat waves. My responsibility as a project manager were holding and organizing the weekly meetings, and helping students to stand with their schedules/goals. 
-
-
-</p>
-</li>
-</ul>
-
-</li>
-</ul>
-<h2>Academic Service &amp; Mentoring</h2>
-<ul>
-<li><p>Serving as the <b>Secretary</b> of the Institute for Operations Research and Management Sciences (INFORMS) at UM. (2019)​
-
-</p>
-</li>
-<li><p>Serving as the <b>Treasurer</b> of the Engineering and Infrastructure Specialty Group of the Society for Risk Analysis (Dec 2018 to present) ​
-
-</p>
-</li>
-<li><p>Serving as the <b>Graduate Student Coordinator</b>, Department of Industrial and Operations Engineering University of Michigan (June 2018 to present)
-
-</p>
-</li>
-<li><p>Being in the <b>Student Leadership Board Representative</b>, Department of Industrial and Operations Engineering University of Michigan (June 2018 to present)
-
-</p>
-</li>
-<li><p>Reviewer for the Journal of Risk Analysis, Journal of IEEE Access, Journal of Transportation research part E, Journal of Decision Sciences, Journal of the Operational and Research Society, and The Annual European Safety and Reliability Conference-ESREL 
-</p>
-<ul>
-<li><p>Please find my Publons&rsquo; account using <a href="https://publons.com/researcher/1452656/elnaz-kabir/" target=&ldquo;blank&rdquo;>this link</a>. 
-
-
-
-
-</p>
-</li>
-</ul>
-
+<li><p>In Fall 2018, I taught <a href="https://bulletin.engin.umich.edu/courses/ioe/" target=&ldquo;blank&rdquo;>Decision Analysis (IOE 460)</a>. </p>
 </li>
 </ul>
 </td>
