--- a/teaching.html
+++ b/teaching.html
@@ -13,7 +13,7 @@
 <tr valign="top">
 <td id="layout-menu">
 <div class="menu-category">Elnaz Kabir</div>
-<div class="menu-item"><a href="">Home</a></div>
+<div class="menu-item"><a href="index">Home</a></div>
 <div class="menu-item"><a href="publication">Publications</a></div>
 <div class="menu-item"><a href="teaching" class="current">Teaching</a></div>
 <div class="menu-item"><a href="CV_ElnazKabir.pdf">CV</a></div>
