--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
 </td></tr></table>
 <h2>About Me</h2>
 <p>
-I am an Assistant Professor in the Department of <a href="https://engineering.tamu.edu/etid/index.html" target=&ldquo;blank&rdquo;>Engineering Technology &amp; Industrial Distribution</a> (ETID) at <a href="https://www.tamu.edu/index.html" target=&ldquo;blank&rdquo;>Texas A&amp;M University</a>, where I am passionate about developing cutting-edge solutions for critical infrastructure resilience concerns, with a special focus on power systems. <br />
+I am an Assistant Professor in the Department of <a href="https://engineering.tamu.edu/etid/index.html" target=&ldquo;blank&rdquo;>Engineering Technology &amp; Industrial Distribution</a> (ETID) at <a href="https://www.tamu.edu/index.html" target=&ldquo;blank&rdquo;>Texas A&amp;M University</a>, where I am passionate about developing cutting-edge solutions for energy and infrastructure systems, with a special focus on power systems. <br />
 <br />
-My research revolves around designing data-driven frameworks that can thrive in uncertain environments, tackling issues in <i><b>energy system decarbonization</b></i> and <i><b>power outage management</b></i>. To achieve this, I leverage the power of predictive and prescriptive analytics, drawing from diverse fields like data science, machine learning, risk analysis, and simulation. I also delve into stochastic and robust optimization methodologies to ensure robustness and adaptability. <br />
+My research focuses on developing and applying advanced analytics to model, optimize, and strengthen future energy systems under deep uncertainty — systems that are renewable-rich, electrified, AI-intensive, decentralized, and interdependent across electricity, hydrogen, and supply chain networks. <br />
 <br />
 Prior to my current position, I was a Postdoctoral Research Fellow at <a href="https://www.cornell.edu/" target=&ldquo;blank&rdquo;>Cornell University</a>. My academic journey includes earning a Ph.D. in <a href="http://ioe.engin.umich.edu/" target=&ldquo;blank&rdquo;>Industrial and Operations Engineering</a> from the <a href="https://umich.edu/" target=&ldquo;blank&rdquo;>University of Michigan</a>, complemented by an M.S. in <a href="https://lsa.umich.edu/stats" target=&ldquo;blank&rdquo;>Statistics</a>. <br />
 <br />
-I am deeply enthusiastic about the boundless possibilities of my work and its potential to drive transformative change in critical infrastructure resilience. My current projects are as diverse as they are impactful, spanning various facets of power system resiliency.
+I am deeply passionate about the transformative potential of my work, recognizing that power grids and energy systems form the backbone of modern society and are closely linked with every critical infrastructure. My current projects reflect this vision, spanning a diverse range of efforts to enhance the resiliency, reliability, and intelligence of future power systems.
 
 
 
