--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <tr valign="top">
 <td id="layout-menu">
 <div class="menu-category">Elnaz Kabir</div>
-<div class="menu-item"><a href="index.html" class="current">Home</a></div>
-<div class="menu-item"><a href="publication.html">Publications</a></div>
-<div class="menu-item"><a href="teaching.html">Teaching</a></div>
+<div class="menu-item"><a href="index.html" class="current">About</a></div>
 <div class="menu-item"><a href="CV_ElnazKabir.pdf">CV</a></div>
+<div class="menu-item"><a href="now.html">Now</a></div>
+<div class="menu-item"><a href="contact.html">Contact</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
